# adiosvm

Tutorial/gray-scott/: CMakeLists.txt  FindEFFIS.cmake  adios2.xml
Tutorial/gray-scott/analysis/: pdf_calc.cpp
Tutorial/gray-scott/cmake_modules/: FindEFFIS.cmake  FindKittie.cmake
Tutorial/gray-scott/simulation/: main.cpp  settings-files.json  settings.json  writer.cpp
